--- a/ext/lib/header/styles.styl
+++ b/ext/lib/header/styles.styl
@@ -6,19 +6,19 @@
   padding-right: 0
   height: header-height
   box-shadow: 0 2px 2px rgba(#000, .2)
-  color: #648D6D  
+  color: #2BC0D7  
   background-color: #fff
 
   .header-item.active .header-link,
   .header-link:hover
     color: #fff
-    background-color: #648D6D
+    background-color: #2BC0D7
 
   .header-link
     padding-left: 15px
     padding-right: 15px
     height: header-height
-    color: #648D6D
+    color: #2BC0D7
     font-weight: 500
     font-size: 15px
     height: 43px;
@@ -26,7 +26,7 @@
     margin-top: 15px;
     line-height: 43px;
     &.anon-user
-      background-color: #648d6d
+      background-color: #2BC0D7
       color: white
 
   .logo
@@ -60,7 +60,7 @@
     color: #fff
     border: none
     width: 232px
-    background-color: #648D6D
+    background-color: #2BC0D7
 
     a
       font-size: 16px
@@ -89,7 +89,7 @@ nav.navbar
       font-size 17px
       padding: 0 7px
       &:hover, &:active
-        background #648D6D
+        background #2BC0D7
         color #fff
         cursor: pointer
   #toggleButton
