--- a/ext/lib/admin/admin-topics/styles.styl
+++ b/ext/lib/admin/admin-topics/styles.styl
@@ -1,27 +1,27 @@
 #topics-wrapper .topics-admin
   .btn-success
-    background-color: #EAB266
+    background-color: #5D6AB1
   .btn-group
     .btn-primary
-      background-color: #5F916A
+      background-color: #2BC0D7
       &:hover, &:focus
-          background-color: #476F50
+          background-color: #2BC0D7
   .export-update
     .btn.btn-primary
-      background-color: #5F916A
+      background-color: #2BC0D7
       &:hover, &:focus
-        background-color: #476F50
+        background-color: #2BC0D7
 
   .list.list-group-item a
     &:hover, &:focus
-       background-color: #476F50
+       background-color: #2BC0D7
        span
         background-color: #fff
 
   .list-group-item
     &:hover
       color: #fff
-      background-color: #476F50
+      background-color: #2BC0D7
     .topic-title
       font-weight: inherit
 
