--- a/ext/lib/settings/boot/boot.styl
+++ b/ext/lib/settings/boot/boot.styl
@@ -8,8 +8,8 @@
     width: 100%
 
 .btn-primary
-  background-color #5F916A 
+  background-color #2BC0D7 
   &:hover 
-    background-color: #EAB266
+    background-color: #5D6AB1
 
 
