--- a/ext/lib/site/footer/styles.styl
+++ b/ext/lib/site/footer/styles.styl
@@ -25,7 +25,7 @@
     color white
     font-weight 400
     &:hover
-      color #EAB266
+      color #5D6AB1
       text-decoration none
 
   .logo
