--- a/ext/lib/site/help/styles.styl
+++ b/ext/lib/site/help/styles.styl
@@ -1,10 +1,10 @@
 .help-container
   .breadcrumb 
     li a 
-      color: #476F50
+      color: #5d6ab1
 
   .page-sidebar .nav-pills > li.active > a, .page-sidebar .nav-pills > li.active > a:hover, .page-sidebar .nav-pills > li.active > a:focus
-    background-color: #476f50
+    background-color: #2BC0D7
 
 
   .help-content
@@ -21,17 +21,17 @@
         padding: 0 0 0 20px
         list-style-position: inside
         a
-          color: #476f50
+          color: #2BC0D7
         
       
     a.btn.btn-primary.btn-lg
-      background-color: #648d6d
+      background-color: #238cc9
 
 .stats
   .forums-total-container
     padding: 15px
     border-radius: 5px;
-    background-color: #648d6d
+    background-color: #238cc9
 
     
 
@@ -39,9 +39,9 @@
       display: block
       color: #FFF
       font-size: 1.4rem
-      background-color: #648d6d
+      background-color: #238cc9
     .data-title
-      background-color: #648d6d
+      background-color: #238cc9
       font-weight: 700
     @media screen and (min-width: 750px)
 
@@ -57,6 +57,6 @@
   .text-center
     text-align: center !important
     .text-primary 
-      color: #476f50 !important
+      color: #2BC0D7 !important
   .subtitle
     font-weight: 300
