--- a/ext/lib/site/home-multiforum/forum-card/styles.styl
+++ b/ext/lib/site/home-multiforum/forum-card/styles.styl
@@ -55,7 +55,7 @@
     .forum-card-footer
       .btn.btn-link
         color: white !important
-        background-color: #43986E !important
+        background-color: #238cc9 !important
         text-decoration: none !important
 
   &:before
