--- a/ext/lib/site/topic-layout/topic-article/lateral-bar/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/lateral-bar/styles.styl
@@ -17,11 +17,11 @@
   li
     font-size: 15px
     font-weight: normal    
-    color: #648D6D
+    color: #5d6ab1
     a
       text-decoration:none
       display: block
       padding: 10px 5px
     a:hover
       background-color: #D6EAF3
-      color: #648D6D
+      color: #5d6ab1
