--- a/ext/lib/site/topic-layout/topic-article/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/styles.styl
@@ -61,7 +61,7 @@
 
   button.btn.btn-primary
     width:100%
-    background-color: #EAB266 
+    background-color: #5D6AB1 
   .topics-hierarchy
     h4
       font-size:1.2em
