--- a/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
@@ -63,7 +63,7 @@
 
   .change-vote
     .btn.btn-secondary
-      background-color: #5f916a
+      background-color: #5d6ab1
       color: #FFF
     
   .voted-results-exp
@@ -100,11 +100,11 @@
     margin-bottom:0
 
 button.btn.btn-secondary
-  background-color: #5f916a
+  background-color: #5d6ab1
   color: #fff
 
  .alert.alert-info.alert-voted
-    background-color #eab266
-    border-color #eab266
+    background-color #5D6AB1
+    border-color #5D6AB1
     .icon-info 
       color: black
