--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
@@ -1,11 +1,11 @@
 .vote-option.vote-yes
-    background-color: #5f916a
+    background-color: #5d6ab1
     &:hover
         background-color: #1887bf
 .vote-option.vote-no
     background-color: #7B548A
     &:hover
-        background-color: #476f50   
+        background-color: #2BC0D7   
 .votes-cast
     display:none
 
