--- a/ext/lib/admin/admin-comments/styles.styl
+++ b/ext/lib/admin/admin-comments/styles.styl
@@ -1,7 +1,7 @@
 .sidebar-container 
   color: #70599E
   .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus
-    background-color: #476F50
+    background-color: #2BC0D7
 
 
 .forum-subtitle, .topic-subtitle
@@ -142,9 +142,9 @@
 
 .comments-admin
   .btn.btn-primary.btn-sm
-    background-color: #5f916a
+    background-color: #5d6ab1
     &:hover, &:focus
-      background-color: #476f50
+      background-color: #2BC0D7
 
 .general-stats-container
   // background-color: #fff;
@@ -163,7 +163,7 @@
       border-radius: 2px;
       font-size: 13px
     .bg-primary 
-      background-color: #476F50 !important
+      background-color: #2BC0D7 !important
     .bg-light
       background-color: #f3f3f3
 .info-comment
