--- a/ext/lib/header/styles.styl
+++ b/ext/lib/header/styles.styl
@@ -68,7 +68,7 @@
       text-transform: uppercase
 
       &:hover
-        background-color: #EAB266
+        background-color: #5D6AB1
 
 nav.navbar
   height: 72px
@@ -101,7 +101,7 @@ nav.navbar
     color: #888
     &:active,&:hover
       color: #fff
-      background-color: #EAB266 
+      background-color: #5D6AB1 
 
   .user-badge
     button
