--- a/ext/lib/site/home-multiforum/search/styles.styl
+++ b/ext/lib/site/home-multiforum/search/styles.styl
@@ -18,7 +18,7 @@
     width:10%
     min-width: 65px
     height:40px
-    background:#eab266
+    background:#5D6AB1
     color: #fff
     border: 0
 
