--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-hierarchy/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-hierarchy/styles.styl
@@ -2,7 +2,7 @@
   h4
     display: none
   .btn-link.btn-answer
-    color: #648D6D
+    color: #5d6ab1
     background-color: #FFF !important
     text-align: center
     padding-left: 25px
@@ -17,7 +17,7 @@
     .answer-li
       line-height: 30px
       height: 30px
-      color: #648D6D
+      color: #5d6ab1
       font-weight: bold
       text-align: left
 
