--- a/ext/lib/site/home-multiforum/styles.styl
+++ b/ext/lib/site/home-multiforum/styles.styl
@@ -20,7 +20,7 @@
       margin: 10px;
       background-color: #0695d6;
     .btn-primary 
-      background-color: #EAB266; 
+      background-color: #5D6AB1; 
 .ext-site-home-multiforum
   .cover.jumbotron
     background-image: linear-gradient(rgba(100,100,100,.6), rgba(100,100,100,.6)), url('/ext/lib/site/home-multiforum/fondo-op.jpg')
@@ -79,7 +79,7 @@
     padding-left: 5%;
     padding-right: 5%;
     &.last
-      color: #EAB266  
+      color: #5D6AB1  
       font-weight:bold
       flex-direction:column
       justify-content:center
@@ -91,7 +91,7 @@
 
     .skyblue {
       font-weight: 400;
-      color: #EA7C69;
+      color: #5D6AB1;
     }
   .arrow
     text-align:center
