added new fonts

--- a/ext/lib/admin/boot/boot.styl
+++ b/ext/lib/admin/boot/boot.styl
@@ -3,6 +3,18 @@
 @import '../../*/styles'
 @import '../*/styles'
 
+@font-face
+  font-family: MyriadPro-Regular
+  src: unquote("url('ext/lib/boot/MyriadPro-Regular.otf')")
+
+@font-face
+  font-family: MyriadPro-Regular
+  src: unquote("url('ext/lib/boot/MyriadPro-Light.otf')")
+
+@font-face
+  font-family: MyriadPro-Regular
+  src: unquote("url('ext/lib/boot/MyriadPro-Bold.otf')")
+
 #topic-wrapper
   & > h2 .btn-link
     text-decoration: none !important
