--- a/ext/lib/site/sign-in/btn-miargentina/index.styl
+++ b/ext/lib/site/sign-in/btn-miargentina/index.styl
@@ -1,8 +1,8 @@
 .btn-miargentina
   color: #fff
-  background: #33b560
+  background: #5d6ab1
   border-radius:5px
-  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif
+  font-family: 'MyriadPro-Light', sans-serif
 
   i
     font-size: 1.3em
