--- a/ext/lib/layout/styles.styl
+++ b/ext/lib/layout/styles.styl
@@ -2,7 +2,7 @@
 @import 'ext/node_modules/argob-poncho/dist/css/poncho.css'
 
 body
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif
+  font-family: 'MyriadPro-Light', sans-serif !important
   overflow: auto
 
 #root
