--- a/ext/lib/site/home-multiforum/styles.styl
+++ b/ext/lib/site/home-multiforum/styles.styl
@@ -3,6 +3,7 @@
 @import './search/styles.styl'
 @import './search/results-search/styles.styl'
 
+
 .jumbotron_body
   padding: 50px 0 !important
   .container
@@ -24,7 +25,7 @@
 .ext-site-home-multiforum
   .cover.jumbotron
     background-image: linear-gradient(rgba(100,100,100,.6), rgba(100,100,100,.6)), url('/ext/lib/site/home-multiforum/fondo-op.jpg')
-    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif
+    font-family: 'MyriadPro-Regular', sans-serif
     
 
   .forums-list
