--- a/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
@@ -29,7 +29,7 @@
 
   .topic-action-title
     font-size: 26px
-    font-family: 'Roboto', sans-serif
+    font-family: 'MyriadPro-Bold', sans-serif
     font-weight: 500
     text-align: center
     color: #000
@@ -48,7 +48,7 @@
       background-size: contain
       background-repeat: no-repeat
     span 
-      font-family: 'Roboto', sans-serif
+      font-family: 'MyriadPro-Light', sans-serif
       font-weight: 400
       font-size: 16px
       line-height: 19px
