--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
@@ -59,7 +59,7 @@
             margin-right: 0
         .poll-option-label
           top: 4
-          font-family: 'Roboto', sans-serif
+          font-family: 'MyriadPro-Light', sans-serif
           font-size: 20px
           font-weight: 300
           margin-left: 20px
