text changes & style fixes

--- a/ext/lib/site/home-multiforum/styles.styl
+++ b/ext/lib/site/home-multiforum/styles.styl
@@ -79,14 +79,21 @@
     font-size: 20px
     padding-left: 5%;
     padding-right: 5%;
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
     &.last
       color: #5D6AB1  
       font-weight:bold
       flex-direction:column
       justify-content:center
+    
+    .container-paragraph
+      width: 40%
 
     .bold {
       font-weight: 400
+      width: 100%
       
     }
 
