--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
@@ -1,11 +1,11 @@
 .vote-option.vote-yes
     background-color: #5d6ab1
     &:hover
-        background-color: #1887bf
+        background-color: #2f3557
 .vote-option.vote-no
     background-color: #7B548A
     &:hover
-        background-color: #2BC0D7   
+        background-color: #44354a
 .votes-cast
     display:none
 
