--- a/ext/lib/site/home-multiforum/styles.styl
+++ b/ext/lib/site/home-multiforum/styles.styl
@@ -90,12 +90,17 @@
     
     .container-paragraph
       width: 50%
+      @media (min-width: 300px) and (max-width: 800px)  
+        width: 100%
+        font-size: 0.8em
 
-    .bold {
+    .bold 
       font-weight: 400
       width: 100%
       
-    }
+    
+      @media (min-width: 300px) and (max-width: 800px)
+        font-size: 0.8em
 
     .skyblue {
       font-weight: 400;
