--- a/ext/lib/site/topic-layout/topic-article/social/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/social/styles.styl
@@ -5,7 +5,6 @@
   align-items: flex-start
   margin: 32px 20px 20px 0
   width:90px
-  height:90px
   @media (min-width: 991px)
     position:sticky
     top:10
@@ -66,14 +65,14 @@
         background-color: #3b5998
 
       &.icon-social-twitter:hover
-        background-color: #3498db
+        background-color: #3b5998
 
 span.icon-lock, .closed
   margin-top: 5px
   color: #910D1D !important
 span.icon-lock-open, .open
   margin-top: 5px
-  color: #145730 !important
+  color: #2c3e50 !important
 
 .ext-topic-layout .topic-article-wrapper .topic-social .participants-box span
   font-weight:100
