removed icon-bell from header

--- a/ext/lib/header/styles.styl
+++ b/ext/lib/header/styles.styl
@@ -9,6 +9,10 @@
   color: #2BC0D7  
   background-color: #fff
 
+  .header-item.notifications-link
+    display: none
+    @media (max-width: 780px)
+      display: none
   .header-item.active .header-link,
   .header-link:hover
     color: #fff
