--- a/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
@@ -74,12 +74,16 @@
     display: flex
     justify-content: center
     align-items: center
+    background-color: #5D6AB1
+    color: #fff
+    border-color: #5D6AB1
+
       
     .bold 
       font-weight: bold
       
-    .black 
-      color: #000
+    .white
+      color: #fff
     
     .thanks 
       margin: 0 10px
@@ -107,4 +111,4 @@ button.btn.btn-secondary
     background-color #5D6AB1
     border-color #5D6AB1
     .icon-info 
-      color: black
+      color: #fff
