--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
@@ -11,11 +11,11 @@
         width: 102px
       .btn-secondary.mx-auto
         width: auto
-        background-color: #3995D6
+        background-color: #5D6AB1
         color: #FFF
         margin-top: 54px
       .poll-btn
-        color: #707070
+        color: #000
         text-transform: none
         font-size: 18px
         padding-left: 0
@@ -27,7 +27,7 @@
           top: 7
           left: 25
         .icon-check
-          background-color: #3995D6
+          background-color: #5D6AB1
           z-index:-1
         .icon-check::before
           content: ''
@@ -67,11 +67,12 @@
 
       .poll-btn.show-results.winner
         .results-bar
-          background-color: #3995D6
+          background-color: #5D6AB1
         .poll-option-label
           font-weight: 400
         .circle.icon-check
           display: none
+         
 
  .icon-clock
   font-size: 13px
