--- a/ext/lib/site/topic-layout/topic-article/social/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/social/styles.styl
@@ -1,15 +1,17 @@
 
 .topic-social
   display: flex
-  flex-direction: column
   align-items: flex-start
   margin: 32px 20px 20px 0
   width:90px
+  height: 0
   @media (min-width: 991px)
+    flex-direction: column
     position:sticky
     top:10
     z-index:1
   @media (max-width: 991px)
+    flex-direction: column
     justify-content: space-between
     margin: 0
     margin-left:6%
