fix: en caja de resultados de encuesta cerrada se salía el texto de las barras de porcentajes

--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
@@ -23,7 +23,7 @@
         .poll-option-label
           margin-left: 10px
           font-weight: 300
-          position: absolute
+          position: static
           top: 7
           left: 25
         .icon-check
@@ -35,7 +35,7 @@
         display: flex
         align-items: center
         width: 413px
-        height: 26px
+        height: auto
         border-radius: 19px
         margin-left: 0px
         margin-bottom: 15px
